# instagram-downloader

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: AUDIT_AND_STRATEGY.md
instagram_archive_studio/: __init__.py  cli.py  downloader.py  server.py
instagram_archive_studio/static/: app.js  index.html  styles.css
instagram_archive_studio/static/legal/: acceptable-use.html  privacy.html  terms.html
scripts/: install_wsl.sh
tests/: test_downloader.py
