[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social-archive-studio"
version = "0.1.0"
description = "Local-first social media archive tool for permitted creator and agency workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "instaloader>=4.15.1",
  "yt-dlp>=2025.12.8",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "tqdm>=4.66.0",
]
authors = [{ name = "Social Archive Studio" }]
license = { text = "Proprietary" }
keywords = ["instagram", "youtube", "tiktok", "twitter", "archive", "creator-tools", "media-library"]

[project.scripts]
social-archive-studio = "instagram_archive_studio.cli:main"
social-archive-server = "instagram_archive_studio.server:run"
instagram-archive-studio = "instagram_archive_studio.cli:main"
instagram-archive-server = "instagram_archive_studio.server:run"

[tool.setuptools.packages.find]
include = ["instagram_archive_studio*"]

[tool.setuptools.package-data]
instagram_archive_studio = ["static/*.html", "static/*.css", "static/*.js", "static/legal/*.html"]
